--- a/app/src/main/res/layout/activity_crop_soil_analysis_list.xml
+++ b/app/src/main/res/layout/activity_crop_soil_analysis_list.xml
@@ -4,16 +4,15 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context=".activities.CropFieldsListActivity"
-    tools:showIn="@layout/activity_crop_fields_list">
+    tools:context=".activities.CropSoilAnalysisListActivity">
+
 
     <android.support.v7.widget.RecyclerView
-        android:id="@+id/crop_field_recyc_view"
+        android:id="@+id/crop_machine_recyc_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="192dp"
         android:layout_marginTop="16dp"
+        android:layout_marginBottom="192dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -22,5 +21,7 @@
         app:layout_constraintVertical_bias="0.0">
 
     </android.support.v7.widget.RecyclerView>
+
+
 
 </RelativeLayout>
